k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-python-service
spec:
  selector:
    app: hello-python
  ports:
    - protocol: TCP
      port: 5006
      targetPort: 5006
  type: ClusterIP
